# what-size.yazi

./: .editorconfig  .luarc.json  README.md  init.lua  main.lua
.github/workflows/: ci.yml  test.yml
tests/: .gitignore  Cargo.toml  README.md  justfile
tests/test_config/: init.lua  keymap.toml
tests/tests/: run.rs  test_yazi_size_cwd.rs  test_yazi_size_cwd_clipboard.rs  test_yazi_size_selection.rs  test_yazi_size_selection_clipboard.rs
tests/tests/common/: env.rs  fixtures.rs  helpers.rs  mod.rs  pty_helpers.rs
